# e4biblesaver-rust

./: .xscreensaver  Cargo.toml  Makefile  README.md  build.rs  e4biblesaver.xml  update_configuration.sh
src/: bible.h  biblescreensaver.rs  bibleverse.rs  e4.rs  e4verse.rs  main.rs  main.rs.orig  xscreensaver.rs
